# bruter changelog https://github.com/brutopolis/bruter

(19/05/2025) - version 0.8.6

- improved safety for list and table functions, if a list is passed to a function that expect a table, it will work perfectly;
- when table, duplicate and init will set all the allocated memory for keys to NULL;
- some fixes;

(17/05/2025) - version 0.8.5a

- new function list_copy, it copies the list;

(09/05/2025) - version 0.8.5

- list_call now can receive a context to be used;
- new functions: table_init, table_set, table_push, table_unshift, table_insert;

(29/04/2025) - version 0.8.4

- full rework;
- parse, interpret, string functions, new_ functions, labels, macros and everything thats not part of the list system been moved to buxu;
- interpret function is now called list_call;
- bruter still doing functions calls and such, but you need to make the lists manually, which is not hard at all, but;
- you can also use buxu, its basically the old bruter, those removed features like parsing, labeling and such are now part of buxu;
- List type now does have a property called keys, which is meant for tables, it wont be initialized unless you init it with table_keys;
- tables and lists share the same struct, but tables init the List.keys, while lists just set it to NULL;
- every list function also works with tables;
- new function list_set, this only works for tables;

(25/04/2025) - version 0.8.3

- say goodbye to the '' "" and (@) delimiters
- welcome back {} demiliter for string, it is the only string delimiter now, and supports recursion of course;
- labels introduced, a easy way to name values, and keep track of them;
- label example: @name value;
- name is saved for the next call, and assigned to the value's label slot;
- "NULL" does not exist anymore;
- hashes are now called labels, which is a more apropriate name, beside that, they are the same;
- no more hash() macro;
- the parser now deals with \) and \} correctly;
- label_set and label_unset are not a thing anymore;